fix - z-index and delivery time

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/homepage.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/homepage.scss
@@ -117,7 +117,7 @@
 
   .tooltip {
     visibility: hidden;
-    z-index: auto;
+    z-index: 800;
   }
 }
 
